# predator_prey_aposematism_model

./: .gitignore  LICENSE  pyproject.toml
src/models/: environment_class.py  predator_model.py  prey_model.py
