[tool.poetry]
name = "predator-prey-aposematism-model"
version = "0.1.0"
description = "A population model based around predators and aposematic prey, with elements of learning and evolution. Models for single prey-single predators, single prey-multi predators, multi prey-multi predators, multi prey-single predators. Visualisations of populations over time. Analysis of population success based on animal characteristics and traits"
authors = ["Nuvraj Simon Sanghera, James B Barnett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.13.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"
statsmodels = "^0.14.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
